updated privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -34,7 +34,15 @@
     </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Privacy</h1>
+    <h1 class="cover-heading">Privacy Policy</h1>
+    <h6>Last updated: October 16th, 2022</h6>
+
+    <br>
+    <p>No personal information is required to access or use the <b>Pokemon Ribbon Tracker</b> website. We do not collect any
+    any personal information or identification. We also do not use any ad tracking.</p>
+
+    <p></p>
+
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
