--- a/pkmn_oras.html
+++ b/pkmn_oras.html
@@ -17,6 +17,9 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- JQuery file-->
+  <script src="assets/js/jquery-3.6.1.min.js" type="text/javascript"></script>
 </head>
 
 <body class="text-center">
