added save, select all and clear buttons

--- a/pkmn_bdsp.html
+++ b/pkmn_bdsp.html
@@ -295,6 +295,7 @@
 
         <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>
         <button type="button" value="deselectAll" class="button" onclick="uncheckAll()">Clear</button>
+        <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
 
       </div>
     </section>
