--- a/pkmn_usum.html
+++ b/pkmn_usum.html
@@ -143,7 +143,9 @@
               </tr>
             </tbody>
           </table>
-
+          <button type="button" value="save" class="button" onclick="save()">Save</button>
+          <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>
+          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
       </div>
     </section>
 
