--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -319,10 +319,9 @@
               </tr>
             </tbody>
           </table>
-
+          <button type="button" value="save" class="button" onclick="save()">Save</button>
           <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>
-          <button type="button" value="deselectAll" class="button" onclick="uncheckAll()">Clear</button>
-  
+          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
         </div>
       </section>
   
