--- a/pkmn_xd_colosseum.html
+++ b/pkmn_xd_colosseum.html
@@ -20,6 +20,7 @@
 
   <!-- JQuery file-->
   <script src="assets/js/jquery-3.6.1.min.js" type="text/javascript"></script>
+
 </head>
 
 <body class="text-center">
@@ -73,9 +74,10 @@
             </tr>
           </tbody>
         </table>
+        <!-- 
         <button type="button" value="save" class="button" onclick="save()">Save</button>
-        <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>
-        <button type="button" value="deselectAll" class="button" onclick="clear()">Clear</button>
+        <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>-->
+        <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
       </div>
     </section>
 
@@ -96,8 +98,38 @@
   <!-- Vendor JS Files -->
 
 
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <!-- Main JS File 
+  <script src="assets/js/main.js"></script>-->
+
+  <script>
+    $('.custom-control-input').on('click', function() {
+      var fav, favs = [];
+      $('.custom-control-input').each(function() { // run through each of the checkboxes
+        fav = {id: $(this).attr('id'), value: $(this).prop('checked')};
+        favs.push(fav);
+      });
+      localStorage.setItem("ribbonListXDC", JSON.stringify(favs));
+
+      console.log(favs);
+    });
+
+    // Parses through the created json file and reasigns values to the checkboxes
+    $(document).ready(function() {
+      var list = JSON.parse(localStorage.getItem('ribbonListXDC'));
+      if (!list.length) {return};
+      console.debug(list);
+
+      for (var i = 0; i < list.length; i++) {
+        console.debug(list[i].value == 'on');
+        $('#' + list[i].id ).prop('checked', list[i].value);
+      }
+    });
+
+    function clearAll() {
+      location.reload();
+      localStorage.removeItem('ribbonListXDC');
+    }
+  </script>
 
 </div>
 </body>
