--- a/privacy.html
+++ b/privacy.html
@@ -35,11 +35,13 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Privacy Policy</h1>
-    <h6>Last updated: October 16th, 2022</h6>
+    <h6>Last updated: December 29th, 2022</h6>
 
     <br>
     <p>No personal information is required to access or use the <b>Pokemon Ribbon Tracker</b> website. We do not collect any
     any personal information or identification. We also do not use any ad tracking.</p>
+
+    <p>In order to save your progress, Pokemon Ribbon Tracker requires access to local storage.</p>
 
     <p></p>
 
