updated credits page

--- a/credits.html
+++ b/credits.html
@@ -35,6 +35,16 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Credits</h1>
+
+    <br>
+    <p>This website was created and is maintained by <a href="https://evanmccarthy.vercel.app/">Evan McCarthy</a>.</p>
+    <br>
+    
+    <h2>Sources:</h2>
+    <p><a href="https://serebii.net/">Serebii.net</a></p>
+    <p><a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/">u/CaptainTimey's Reddit post on r/pokemonribbons</a></p>
+    <p><a href="https://bulbapedia.bulbagarden.net/wiki/Mark">Bulbapedia</a></p>
+
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
