--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- JQuery file-->
+  <script src="assets/js/jquery-3.6.1.min.js" type="text/javascript"></script>
 </head>
 
 <body class="text-center">
@@ -100,7 +103,18 @@
             </div>
           </div>
         </div>
-
+        
+        <div class="row">
+          <div class="col-lg-4 mb-4 mb-lg-4">
+          </div>
+          <div class="col-lg-4 mb-4 mb-lg-4">
+            <div class="icon-box">
+              <a href="pkmn_sv.html"><img src="assets/images/pokemon_sv_logo.jpg" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Scarlet & Violet logos"></a></img>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4 mb-lg-4">
+          </div>
+        </div>
       </div>
     </section>
   </main><!-- End of main -->
