--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Pokemon Ribbon Tracker</title>
 
   <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 
   <!-- Bootstrap core CSS -->
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
