removed favicon link in head

--- a/credits.html
+++ b/credits.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
   <meta charset="utf-8">
@@ -9,14 +9,11 @@
 
   <title>Pokemon Ribbon Tracker</title>
 
-  <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
+  <!-- Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- Bootstrap core CSS -->
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
