--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
   <meta charset="utf-8">
@@ -8,9 +8,6 @@
   <meta name="author" content="Evan McCarthy aka. Cheeli99">
 
   <title>Pokemon Ribbon Tracker</title>
-
-  <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 
   <!-- Bootstrap core CSS -->
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
